# modplayer_sdl

./: .gitignore  CMakeLists.txt  readme.md  readme.txt
src/: modplayer.cpp  pocketmod.h  text.cpp  text.h
